Updates to build command to parameterize skipTests and remove assumed obsolete prereqs